# Google_News_Scrapping

./: DEPLOYMENT.md  README.md  berita_google_news.db  packages.txt  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml  secrets.toml.example
app/: __init__.py  database.py  scraper.py  sentiment.py  test.py  ui.py
