[project]
name = "blank-app-template"
version = "0.1.0"
description = "A simple Streamlit app template."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.58.0",
    "pandas",
    "matplotlib",
    "playwright",
    "newspaper3k",
    "wordcloud",
    "psycopg2-binary",
    "lxml[html-clean]",
]

[tool.uv]
package = false
