[project]
name = "google-news-scrapping"
version = "1.0.0"
description = "Google News Scraping Dashboard with Sentiment Analysis"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "playwright>=1.40.0",
    "newspaper3k>=0.12.8",
    "feedparser>=6.0.0",
    "wordcloud>=1.9.0",
    "psycopg2-binary>=2.9.0",
    "lxml>=4.9.0",
    "html5lib>=1.1",
    "beautifulsoup4>=4.12.0",
    "plotly>=5.17.0",
    "kaleido>=0.2.1",
    "googlenewsdecoder>=0.2022.6.1",
    "streamlit-plotly-events>=0.0.6",
    "nltk>=3.8.0",
    "requests>=2.31.0",
    "Pillow>=10.0.0",
]

[tool.uv]
package = false
